tests/ui-msrv/include_bytes.stderr
error[E0277]: the trait bound `UnsafeCell<u32>: FromBytes` is not satisfied
  --> tests/ui-msrv/include_bytes.rs:12:42
   |
12 |     let _: core::cell::UnsafeCell<u32> = include_bytes!("../include_bytes.data");
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `UnsafeCell<u32>`
   |
note: required by a bound in `main::transmute`
  --> tests/ui-msrv/include_bytes.rs:12:42
   |
12 |     let _: core::cell::UnsafeCell<u32> = include_bytes!("../include_bytes.data");
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `main::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
